--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "antd": "^5.13.2",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-i18next": "^14.0.1",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0",
